# fantasee

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  add_images_steel.py  background_music.py  batch_generate.py  batch_improve.py  batch_improve_results.json  batch_pipeline.py  check_db.py  check_story.py  comfyui_utils.py  complete_story.py  critic.py  debug_jobs.py  delete_story.py  diff_first.txt  docker-compose.yml  extend_and_export.py  extend_direct.py  fantasee-story-generator.md  fantasee_settings.json  fix_subtitles.py  generate_story.py  generate_subtitles.py  image_quality.py  kill_workers.bat  migrate_backfill_scene_field.py  migrate_outputs_to_stories.py  monitor_batch.py  monitor_export.py  monitor_export_v2.py  nightly_steward.py  package-lock.json  package.json  plex_export.py  poc_pipeline.py  (+30 more)
.codex-artifacts/: run_server_no_agent.cmd
.playwright-cli/: page-2026-07-17T19-52-17-152Z.yml  page-2026-07-17T19-57-45-600Z.yml  page-2026-07-17T19-58-00-386Z.yml  page-2026-07-17T20-04-48-131Z.yml  page-2026-07-17T20-11-32-974Z.yml  page-2026-07-17T20-11-49-272Z.yml  page-2026-07-17T20-16-11-265Z.yml  page-2026-07-17T20-16-21-755Z.yml  page-2026-07-17T20-27-12-530Z.yml
docs/: FANTASEE_REBUILD_PLAN.md  FANTASEE_TODO.md  STORY_ENGINE_ARCHITECTURE.md  SYSTEM.md  Storymaster.txt
fantasee_server/: __init__.py  asset_registry.py  background.py  discovery.py  improver.py  library.py  llm_adapter.py  llm_tokens.py  media_timeline.py  migration.py  models.py  paths.py  production_runtime.py  production_store.py  production_worker.py  security.py  seed.py  shot_planning.py  startup.py  state.py  subtitle_validation.py
prisma/: schema.prisma  seed.ts
references/: architecture.md  subtitle-sync.md
skills/: README.md  animated-storytelling.SKILL.md  comfyui.SKILL.md  gamelit-isekai-style-prompt.md  piper-tts.SKILL.md  (+8 more)
(+710 files in other folders)
