[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasee"
version = "0.2.0"
description = "AI story generation pipeline — LLM writes narrated multi-scene stories, ComfyUI generates images, TTS narrates, Whisper aligns subtitles, FFmpeg renders video. Netflix-style browser viewer."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alistair Allen" },
]
keywords = ["ai", "story-generation", "comfyui", "llm", "tts", "whisper", "video", "plex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pillow>=10.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "websockets>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24.0",
]
tts = [
    "edge-tts>=6.1.0",
    "faster-whisper>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/BigAlzz/fantasee"
Repository = "https://github.com/BigAlzz/fantasee"
Issues = "https://github.com/BigAlzz/fantasee/issues"

[tool.setuptools.packages.find]
include = ["fantasee_server*"]

[project.scripts]
fantasee = "server:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "media: opt-in media smoke tests that require ffmpeg, ffprobe, or Pillow",
    "hardware: opt-in hardware smoke tests that exercise worker readiness and device selection",
]
